# daml-ui-template

./: .gitignore  Makefile  README.md  azure-pipelines.yml  daml.yaml  package.json
daml/: Main.daml  Person.daml  ScriptUtils.daml  SourceData.daml  Treasury.daml  User.daml
daml-ts/: package.json  tsconfig.json
operator_bot/: pyproject.toml
operator_bot/bot/: __init__.py  operator_bot.py
src/: config.js  index.js  serviceWorker.js
src/components/: App.js
src/components/Contracts/: Contracts.js  styles.js
src/components/Header/: Header.js
src/components/Layout/: Layout.js
src/context/: LedgerContext.js
src/pages/default/: Default.js
src/pages/login/: Login.js
src/pages/report/: Report.js
ui/: .pnp.js  package-lock.json  package.json
ui-js/: package.json
ui-js/src/components/: App.js
ui-js/src/components/Contracts/: Contracts.js  styles.js
ui-js/src/components/Layout/: Layout.js
ui-js/src/components/Sidebar/: Sidebar.js
ui-js/src/context/: UserContext.js
ui-js/src/pages/default/: Default.js
ui-js/src/pages/error/: Error.js
ui-js/src/pages/report/: Report.js
ui-js/src/pages/role/: Role.js
ui-ts/: package.json
ui-ts/public/: manifest.json
ui-ts/src/: config.tsx  index.tsx
ui-ts/src/components/: App.tsx
ui-ts/src/context/: LayoutContext.tsx  UserContext.tsx
ui-ts/src/themes/: default.ts
ui/public/: index.html
ui/src/: config.js  config.ts  index.tsx  parties.json
ui/src/components/: App.js  App.tsx
ui/src/context/: AliasesContext.tsx  SessionContext.tsx  UserContext.js  UserContext.tsx
ui/src/themes/: index.ts
(+46 files in other folders)
